# cyphus-specfun

./: .gitignore  Cargo.toml  README.md
src/: airy.rs  bessel.rs  consts.rs  debye.rs  elementary.rs  exp.rs  gamma.rs  lambert_w.rs  lib.rs  poly.rs  pow.rs  result.rs  test_utils.rs  zeta.rs
src/airy/: airy_core.rs  airy_data.rs  airy_deriv.rs  airy_zeros.rs  core.rs  data.rs
src/bessel/: bessel_data.rs  bessel_helpers.rs  besselj.rs  bessely.rs  cyl_bessel_i.rs  cyl_bessel_j.rs  cyl_bessel_k.rs  cyl_bessel_y.rs  data.rs  helpers.rs  olver.rs  sph_bessel_i.rs  sph_bessel_j.rs  sph_bessel_k.rs  sph_bessel_y.rs
src/cheb/: mod.rs
src/exp/: core.rs
src/gamma/: data.rs  inc.rs  mod.rs  mono.rs  poch.rs  psi.rs  utils.rs
src/logarithm/: mod.rs
src/trig/: data.rs  mod.rs  sincos.rs
src/zeta/: core.rs  data.rs  eta.rs  hurwitz.rs  internal.rs  mod.rs  riemann.rs
