[package]
name = "cyphus-specfun"
version = "0.0.1"
authors = ["Logan A Morrison <loanmorr@ucsc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
lazy_static = "1.4.0"
